--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -16,6 +16,15 @@ spec:
         app: hello-gin
         customerName: cocacola
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: kubernetes.io/arch
+                operator: In
+                values:
+                - amd64
       securityContext: # podi tase
         fsGroup: 2000
         runAsGroup: 3000
